node-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  
spec:
  selector:
    matchLabels:
      app: node-app
  replicas: 1
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: express:4.0
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: node-app-svc
spec:
  selector:
    app: node-app
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
